--- a/2D-diffusion-convection/2D-diffusion-convection.vcxproj.filters
+++ b/2D-diffusion-convection/2D-diffusion-convection.vcxproj.filters
@@ -18,13 +18,13 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="matrix.cpp">
+    <ClCompile Include="data.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="matrix.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="data.h">
+      <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
