--- a/2D-diffusion-convection/2D-diffusion-convection.vcxproj
+++ b/2D-diffusion-convection/2D-diffusion-convection.vcxproj
@@ -140,7 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="data.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="data.h" />
